# payload-file-transmission

./: .gitignore  .settings.kak  README.md  commands.c  file-commands.c  meson.build
include/: crc32.h  protocol.h
lib/: crc32.c  crc32.h  protocol.h  sha256_utils.c  sha256_utils.h
packetize/: crc32.c  main.c  meson.build
receive-packets/: main.c
recieve-packets/: main.c
send-file/: main.c
send-packets/: main.c
stitch/: main.c  meson.build
